--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
 
         .header {
-            background-image: url(./header_test.png);
+            background-image: url(images/header_test.png);
             background-size: cover;
             display: flex;
             align-items: center;
@@ -349,7 +349,7 @@
 
     <div class="container">
         <header class="header">
-            <img src="https://www.google.com/logos/doodles/2024/seasonal-holidays-2024-6753651837110333-law.gif" alt="Profile" class="profile-img">
+            <img src="images/self.png" alt="Profile" class="profile-img">
             <div class="header-content">
                 <h1>Yu Gu (谷雨)</h1>
                 <p>Ph.D. Candidate @<a href="https://x.com/osunlp" target="_blank">OSU NLP</a> </p>
@@ -418,7 +418,7 @@
                            <a href="https://arxiv.org/your-paper-link" target="_blank">[pdf]</a> 
                            <a href="https://github.com/your-repo-link" target="_blank">[code]</a>
                            <span class="award-badge">
-                              <img src="medal.png" alt="Medal" class="medal-icon">
+                              <img src="images/medal.png" alt="Medal" class="medal-icon">
                               <b>Outstanding Paper Award</b>
                            </span>
                         </p>
@@ -431,7 +431,7 @@
                            <a href="https://arxiv.org/your-paper-link" target="_blank">[pdf]</a> 
                            <a href="https://github.com/your-repo-link" target="_blank">[code]</a>
                            <span class="award-badge">
-                              <img src="medal.png" alt="Medal" class="medal-icon">
+                              <img src="images/medal.png" alt="Medal" class="medal-icon">
                               <b>Outstanding Paper Award</b>
                            </span>
                         </p>
