--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         .profile-img {
             width: 150px;
-            height: 150px;
+            height: auto;
             border-radius: 50%;
             border: 2px solid transparent;
             background: var(--accent-gradient);
