--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         .profile-img {
             width: 150px;
-            height: auto;
+            height: 150px;
             border-radius: 50%;
             border: 2px solid transparent;
             background: var(--accent-gradient);
@@ -349,7 +349,7 @@
 
     <div class="container">
         <header class="header">
-            <img src="images/self.png" alt="Profile" class="profile-img">
+            <img src="images/self_square.png" alt="Profile" class="profile-img">
             <div class="header-content">
                 <h1>Yu Gu (谷雨)</h1>
                 <p>Ph.D. Candidate @<a href="https://x.com/osunlp" target="_blank">OSU NLP</a> </p>
