--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Your Name] - AI Researcher</title>
+    <title>Yu Gu</title>
     <style>
 :root {
     --bg-primary: #ffffff;
