--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         .bullet-list {
             margin: 1rem 0 1rem 1.5rem;
-            color: var(--text-secondary);
+            color: var(--text-primary);
         }
 
         .bullet-list li {
@@ -384,7 +384,7 @@
                     <br><br>
                     As an AI researcher in general, I’m a fan of <i>compression is intelligence</i>, but <b>NOT</b> a fan of <i>scaling laws</i>. To achieve better compression, the following questions have to be answered.
                     </p>
-                    <ul>
+                    <ul class="bullet-list">
                         <li>What’s the alternative to scaling laws for achieving better compression? Should we combine weights-based compression with symbol-based compression (<i>e.g.</i>, language)? And how?</li>
                         <li>Closely related to the first question, what tasks are interpolative, and what are not? Our understanding of this question is constantly evolving (<i>e.g.</i>, how many people considered learning natural language grammar an interpolative task a decade ago?). Fortunately, I believe most agent tasks today are still viewed as non-interpolative, which motivates us to explore solutions beyond scaling laws using agent tasks as testbeds.</li>
                     </ul>
