--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
 
         .header-content h1 {
-            font-size: 2.2rem;
+            font-size: 1.8rem;
             margin-bottom: 0.5rem;
             background: var(--accent-gradient);
             -webkit-background-clip: text;
@@ -244,12 +244,12 @@
            background-color: #FFD700; /* Gold background */
            color: #000; /* Black text for contrast */
            font-weight: bold;
-           padding: 4px 8px;
+           padding: 2px 6px;
            border-radius: 6px;
            margin-left: 10px;
            display: inline-flex;
            align-items: center;
-           font-size: 0.9em; /* Adjust font size if needed */
+           font-size: 0.8em; /* Adjust font size if needed */
            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Modern shadow effect */
            text-transform: uppercase; /* Make the text stand out */
         }
@@ -427,7 +427,7 @@
                     </p>
                     <ul class="bullet-list">
                         <li>What’s the alternative to scaling laws for achieving better compression? Should we combine weights-based compression with symbol-based compression (<i>e.g.</i>, language)? And how?</li>
-                        <li>Closely related to the first question, what tasks are interpolative, and what are not? Our understanding of this question is constantly evolving (<i>e.g.</i>, how many people considered learning natural language grammar an interpolative task a decade ago?). Fortunately, I believe most agent tasks today are still viewed as non-interpolative, which motivates us to explore solutions beyond scaling laws using agent tasks as testbeds.</li>
+                        <li>Closely related to the first question, what tasks are interpolative in vector space, and what are not? Our understanding of this question is constantly evolving (<i>e.g.</i>, how many people considered learning natural language grammar an interpolative task a decade ago?). Fortunately, I believe most agent tasks today are still viewed as non-interpolative, which motivates us to explore solutions beyond scaling laws using agent tasks as testbeds.</li>
                     </ul>
                 </section>
 
