--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <p>My research focuses on developing practical <a href="https://yusu.substack.com/p/language-agents">language agents</a> to assist humans in real-world tasks and enhance productivity. Two key challenges are <b>grounding</b> and <b>planning</b>. Existing work has primarily focused on <i>action</i> grounding. However, <i>situational</i> grounding at a higher level, which aligns the agent’s internal state representation with the actual environment, remains underexplored. In planning, search is essential for optimizing performance but presents significant challenges in agent tasks due to the complexity of environmental interactions. Robust <i>world modeling</i> plays a crucial role in improving both situational grounding and search.
                     My current efforts are dedicated to advancing methods in both situational grounding and planning.
                     <br><br>
-                    As an AI researcher in general, I’m a fan of <i>compression is intelligence</i>, but <b>NOT</b> a fan of <i>scaling law</i>. To achieve better compression, the following questions have to be answered.
+                    As an AI researcher in general, I’m a fan of <i>compression is intelligence</i>, but <b>NOT</b> a fan of <i>scaling is all you need</i>. To achieve better compression, the following questions have to be answered.
                     </p>
                     <ul class="bullet-list">
                         <li>What’s the alternative to scaling law for achieving better compression? Should we combine weights-based compression with symbol-based compression (<i>e.g.</i>, language)? And how?</li>
