--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                                Bayesian Models of Cognition
                             </a>
                             <p style="margin: 0; color: var(--text-secondary); font-size: 0.9rem;">
-                                by <i>Thomas L. Griffiths, Nick Chater, et al.</i>
+                                by <i>Thomas L. Griffiths, Nick Chater, Joshua Tenenbaum</i>
                             </p>
                         </div>
                     </div>
