--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <a href="#about">Talks</a>
                 <a href="#about">Collaboration</a>
                 <a href="#about">Blogs</a>
-                <a href="#about">CV</a>
+                <a href="./cv_yugu.pdf">CV</a>
             </div>
         </div>
     </nav>
