--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <a href="#about">About</a>
                 <a href="#publications">Papers</a>
                 <a href="#about">Talks</a>
-                <a href="#about">Collaboration</a>
+                <a href="./yugu_dissertation.pdf">Thesis</a>
                 <a href="#about">Blogs</a>
                 <a href="./cv_yugu.pdf">CV</a>
             </div>
