--- a/index.html
+++ b/index.html
@@ -420,22 +420,16 @@
             <div class="main-content">
                 <section id="about" class="section">
                     <h2>About</h2>
-                    <p>My research focuses on developing practical <a href="https://yusu.substack.com/p/language-agents">language agents</a> to assist humans in real-world tasks and enhance productivity. Two key challenges are <b>grounding</b> and <b>planning</b>. Existing work has primarily focused on <i>action</i> grounding. However, <i>situational</i> grounding at a higher level, which aligns the agent’s internal state representation with the actual environment, remains underexplored. In planning, search is essential for optimizing performance but presents significant challenges in agent tasks due to the complexity of environmental interactions. Robust <i>world modeling</i> plays a crucial role in improving both situational grounding and search.
-                    My current efforts are dedicated to advancing methods in both situational grounding and planning.
-                    <br><br>
-                    As an AI researcher in general, I’m a fan of <i>compression is intelligence</i>, but <b>NOT</b> a fan of <i>scaling is all you need</i>. To achieve better compression, the following questions have to be answered.
+                    <p>I obtained my doctorate degree on AI agents from OSU. At this point, I am mainly focused on <a href="https://entslscheia.github.io/yugu_dissertation.pdf">AI agents powered with natural language</a>.
+                    In the long run, I wish to keep deepening my understanding of <b>intelligence</b>, which is the main drive for me to work on AI research. (will likely expand a bit on this when I find time)
                     </p>
-                    <ul class="bullet-list">
-                        <li>What’s the alternative to scaling law for achieving better compression? Should we combine weights-based compression with symbol-based compression (<i>e.g.</i>, language)? And how?</li>
-                        <li>Closely related to the first question, what tasks are interpolative in vector space, and what are not? Our understanding of this question is constantly evolving (<i>e.g.</i>, how many people considered learning natural language grammar an interpolative task a decade ago?). Fortunately, I believe most agent tasks today are still viewed as non-interpolative, which motivates us to explore solutions beyond scaling law using agent tasks as testbeds.</li>
-                    </ul>
                 </section>
 
                 <section id="publications" class="section">
                     <h2>Selected Publications</h2>
                     <div class="publication">
                         <h3><i>Is Your LLM Secretly a World Model of the Internet?</i> Model-Based Planning for Web Agents</h3>
-                        <p><b>Yu Gu</b>*, Boyuan Zheng*, Boyu Gou, Kai Zhang, Cheng Chang, Sanjari Srivastava, Yanan Xie, Peng Qi, Huan Sun, Yu Su</p>
+                        <p><b>Yu Gu</b>*, Kai Zhang*, Yuting Ning*, Boyuan Zheng*, Boyu Gou, Cheng Chang, Sanjari Srivastava, Yanan Xie, Peng Qi, Huan Sun, Yu Su</p>
                         <p>
                             <span class="venue-badge">Preprint 2024</span> 
                             <a href="https://arxiv.org/your-paper-link" target="_blank">[pdf]</a> 
