--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                         <h3>VisualAgentBench: Towards Large Multimodal Models as Visual Foundation Agents</h3>
                         <p>Xiao Liu*, Tianjie Zhang*, <b>Yu Gu</b>*, Iat Long Iong, Yifan Xu, Xixuan Song, Shudan Zhang, Hanyu Lai, Xinyi Liu, Hanlin Zhao, Jiadai Sun, Xinyue Yang, Yu Yang, Zehan Qi, Shuntian Yao, Xueqiao Sun, Siyi Cheng, Qinkai Zheng, Hao Yu, Hanchen Zhang, Wenyi Hong, Ming Ding, Lihang Pan, Xiaotao Gu, Aohan Zeng, Zhengxiao Du, Chan Hee Song, Yu Su, Yuxiao Dong, Jie Tang</p>
                         <p>
-                            <span class="venue-badge">Preprint 2024</span> 
+                            <span class="venue-badge">ICLR 2025</span> 
                             <a href="https://arxiv.org/your-paper-link" target="_blank">[pdf]</a> 
                             <a href="https://github.com/your-repo-link" target="_blank">[code]</a>
                         </p>
