--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
         <header class="header">
             <img src="images/self_square.png" alt="Profile" class="profile-img">
             <div class="header-content">
-                <h1>Dr. Yu Gu (谷雨)</h1>
+                <h1>Yu Gu (谷雨)</h1>
                 <a href="mailto:garygu1116@gmail.com" class="email-link">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
-                    gu.826@osu.edu
+                    garygu1116@gmail.com
                 </a>
                 <div class="social-links">
                     <a href="https://github.com/entslscheia" title="GitHub">
