--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <section id="about" class="section">
                     <h2>About</h2>
                     <p>I obtained my doctorate degree on AI agents from OSU. At this point, I am mainly focused on <a href="https://entslscheia.github.io/yugu_dissertation.pdf">AI agents powered with natural language</a>.
-                    In the long run, I wish to keep deepening my understanding of <b>intelligence</b>, which is the main drive for me to work on AI research. (will likely expand a bit on this when I find time)
+                    In the long run, I wish to keep deepening my understanding of <b>intelligence</b>, which is the main drive for me to work on AI research. Two keywords I care about the most: <b>generalization</b> and <b>consistency</b>. (will likely expand a bit on this when I find time)
                     <br><br> (Update: Building something new, stay tuned!)
 
                     </p>
